[project]
name = "async-csv-importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.4.0",
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]
